// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MyDropdown should render MyDropdown: click 1`] = `
Array [
  <div
    className="editor-format-toolbar block-editor-format-toolbar"
  >
    <div
      className="components-toolbar"
    >
      <div
        className="components-dropdown components-dropdown-menu components-dropdown-button"
      >
        <button
          aria-expanded={true}
          aria-haspopup="true"
          aria-label="dropdown"
          className="components-button components-dropdown-menu__toggle is-opened has-icon"
          onClick={[Function]}
          onKeyDown={[Function]}
          type="button"
        >
          <svg
            aria-hidden={true}
            className="dashicon dashicons-admin-customizer"
            focusable={false}
            height={20}
            role="img"
            viewBox="0 0 20 20"
            width={20}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18.33 3.57s.27-.8-.31-1.36c-.53-.52-1.22-.24-1.22-.24-.61.3-5.76 3.47-7.67 5.57-.86.96-2.06 3.79-1.09 4.82.92.98 3.96-.17 4.79-1 2.06-2.06 5.21-7.17 5.5-7.79zM1.4 17.65c2.37-1.56 1.46-3.41 3.23-4.64.93-.65 2.22-.62 3.08.29.63.67.8 2.57-.16 3.46-1.57 1.45-4 1.55-6.15.89z"
            />
          </svg>
        </button>
        <div
          onKeyDown={[Function]}
          tabIndex="-1"
        >
          <div
            onBlur={[Function]}
            onFocus={[Function]}
          >
            <div
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="components-popover components-dropdown__content components-dropdown-menu__popover is-without-arrow"
                onKeyDown={[Function]}
                onMouseDown={[Function]}
              >
                <div
                  className="components-popover__content"
                  tabIndex="-1"
                >
                  <div
                    style={
                      Object {
                        "position": "relative",
                      }
                    }
                  >
                    <iframe
                      aria-hidden={true}
                      frameBorder={0}
                      src="about:blank"
                      style={
                        Object {
                          "display": "block",
                          "height": "100%",
                          "left": 0,
                          "opacity": 0,
                          "overflow": "hidden",
                          "pointerEvents": "none",
                          "position": "absolute",
                          "top": 0,
                          "width": "100%",
                          "zIndex": -1,
                        }
                      }
                      tabIndex={-1}
                    />
                    <div
                      aria-label="dropdown"
                      aria-orientation="vertical"
                      className="components-dropdown-menu__menu"
                      role="menu"
                    >
                      <button
                        className="components-button components-dropdown-menu__menu-item is-active has-text has-icon"
                        onClick={[Function]}
                        role="menuitem"
                        type="button"
                      >
                        <svg
                          aria-hidden={true}
                          className="dashicon dashicons-admin-customizer"
                          focusable={false}
                          height={20}
                          role="img"
                          viewBox="0 0 20 20"
                          width={20}
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M18.33 3.57s.27-.8-.31-1.36c-.53-.52-1.22-.24-1.22-.24-.61.3-5.76 3.47-7.67 5.57-.86.96-2.06 3.79-1.09 4.82.92.98 3.96-.17 4.79-1 2.06-2.06 5.21-7.17 5.5-7.79zM1.4 17.65c2.37-1.56 1.46-3.41 3.23-4.64.93-.65 2.22-.62 3.08.29.63.67.8 2.57-.16 3.46-1.57 1.45-4 1.55-6.15.89z"
                          />
                        </svg>
                        <div
                          className="test1"
                        >
                          test1
                        </div>
                      </button>
                      <button
                        className="components-button components-dropdown-menu__menu-item has-text has-icon"
                        onClick={[Function]}
                        role="menuitem"
                        type="button"
                      >
                        <svg
                          aria-hidden={true}
                          className="dashicon dashicons-admin-customizer"
                          focusable={false}
                          height={20}
                          role="img"
                          viewBox="0 0 20 20"
                          width={20}
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M18.33 3.57s.27-.8-.31-1.36c-.53-.52-1.22-.24-1.22-.24-.61.3-5.76 3.47-7.67 5.57-.86.96-2.06 3.79-1.09 4.82.92.98 3.96-.17 4.79-1 2.06-2.06 5.21-7.17 5.5-7.79zM1.4 17.65c2.37-1.56 1.46-3.41 3.23-4.64.93-.65 2.22-.62 3.08.29.63.67.8 2.57-.16 3.46-1.57 1.45-4 1.55-6.15.89z"
                          />
                        </svg>
                        <div
                          className="test2"
                        >
                          test2
                        </div>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  Array [
    Array [
      Array [
        "",
        "",
      ],
      <blockquote
        className="wp-block-quote test-block-edit"
      >
        <div
          aria-activedescendant={null}
          aria-label="Write quote…"
          aria-multiline={true}
          aria-owns={null}
          className="rich-text block-editor-rich-text__editable"
          contentEditable={true}
          onBlur={[Function]}
          onCompositionEnd={[Function]}
          onCompositionStart={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          onPaste={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="textbox"
          style={
            Object {
              "whiteSpace": "pre-wrap",
            }
          }
          suppressContentEditableWarning={true}
        />
        <div
          aria-activedescendant={null}
          aria-label="Write citation…"
          aria-multiline={true}
          aria-owns={null}
          className="rich-text block-editor-rich-text__editable wp-block-quote__citation"
          contentEditable={true}
          onBlur={[Function]}
          onCompositionEnd={[Function]}
          onCompositionStart={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          onPaste={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="textbox"
          style={
            Object {
              "whiteSpace": "pre-wrap",
            }
          }
          suppressContentEditableWarning={true}
        />
      </blockquote>,
    ],
    Array [
      "",
      "",
    ],
    Array [
      "",
      "",
    ],
    Array [
      "",
      "",
    ],
  ],
]
`;

exports[`MyDropdown should render MyDropdown: render 1`] = `
Array [
  <div
    className="editor-format-toolbar block-editor-format-toolbar"
  >
    <div
      className="components-toolbar"
    >
      <div
        className="components-dropdown components-dropdown-menu components-dropdown-button"
      >
        <button
          aria-expanded={false}
          aria-haspopup="true"
          aria-label="dropdown"
          className="components-button components-dropdown-menu__toggle has-icon"
          onClick={[Function]}
          onKeyDown={[Function]}
          type="button"
        >
          <svg
            aria-hidden={true}
            className="dashicon dashicons-admin-customizer"
            focusable={false}
            height={20}
            role="img"
            viewBox="0 0 20 20"
            width={20}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18.33 3.57s.27-.8-.31-1.36c-.53-.52-1.22-.24-1.22-.24-.61.3-5.76 3.47-7.67 5.57-.86.96-2.06 3.79-1.09 4.82.92.98 3.96-.17 4.79-1 2.06-2.06 5.21-7.17 5.5-7.79zM1.4 17.65c2.37-1.56 1.46-3.41 3.23-4.64.93-.65 2.22-.62 3.08.29.63.67.8 2.57-.16 3.46-1.57 1.45-4 1.55-6.15.89z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>,
  Array [
    Array [
      Array [
        "",
        "",
      ],
      <blockquote
        className="wp-block-quote test-block-edit"
      >
        <div
          aria-activedescendant={null}
          aria-label="Write quote…"
          aria-multiline={true}
          aria-owns={null}
          className="rich-text block-editor-rich-text__editable"
          contentEditable={true}
          onBlur={[Function]}
          onCompositionEnd={[Function]}
          onCompositionStart={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          onPaste={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="textbox"
          style={
            Object {
              "whiteSpace": "pre-wrap",
            }
          }
          suppressContentEditableWarning={true}
        />
        <div
          aria-activedescendant={null}
          aria-label="Write citation…"
          aria-multiline={true}
          aria-owns={null}
          className="rich-text block-editor-rich-text__editable wp-block-quote__citation"
          contentEditable={true}
          onBlur={[Function]}
          onCompositionEnd={[Function]}
          onCompositionStart={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          onPaste={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="textbox"
          style={
            Object {
              "whiteSpace": "pre-wrap",
            }
          }
          suppressContentEditableWarning={true}
        />
      </blockquote>,
    ],
    Array [
      "",
      "",
    ],
    Array [
      "",
      "",
    ],
    Array [
      "",
      "",
    ],
  ],
]
`;
